tests/conformance/parse/invalid/match_requires_fat_arrow.ks
// EXPECT: Expected =>
val x = match (True) { True -> 1, False -> 0 }
